src/components/pages/awards/Awards.css
.trophies {
    margin: 1em;
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(20em, 1fr));
    gap: 1em;
}

.trophy {
    padding: 1em;
    height: 100%;
    overflow: scroll;
    justify-content: flex-start;
    align-items: center;
    gap: 0.5em;
    border-radius: 5px;
}

.trophyImageButton {
    height: 8em;
    min-width: 5.25em;
    width: auto;
}

.trophyInformation {
    align-items: flex-start;
    gap: 0.5em;
}

.trophyInformation span {
    text-align: left;
}

.trophyName {
    font-weight: bold;
}

.trophyImageAndDescription {
    margin: 1em;
    gap: 1em;
}

.trophyImage {
    width: auto;
    height: auto;
    max-width: 75vw;
    max-height: 90vh;
    position: sticky;
    top: 4em;
}

.trophyDescription {
    width: 100%;
}

.trophyWinners {
    width: 100%;
    gap: 1em;
}

.trophySeasonAndWinners {
    padding-bottom: 1em;
    width: 100%;
    justify-content: flex-start;
    align-items: center;
    gap: 0.5em;
}

.trophySeasonAndWinners:not(:last-of-type) {
    border-bottom: 2px dotted var(--grey);
}

.trophySeason {
    min-width: 5em;
    font-size: 1.25em;
    font-weight: bold;
}

.trophyStatus {
    width: 100%;
    align-items: center;
    gap: 0.5em;
}

.trophySingleStatus {
    width: 100%;
    gap: 0.25em;
}

.trophyCategory {
    font-weight: bold;
}

.trophyNominee {
    padding: 0.5em;
    width: 100%;
    height: revert;
    justify-content: flex-start;
    align-items: center;
    gap: 0.5em;
    box-sizing: border-box;
    border: 1px solid var(--grey);
    border-radius: 5px;
}

.trophyNomineeImage {
    --size: 3em;
    min-width: var(--size);
    min-height: var(--size);
    height: var(--size);
    width: var(--size);
}

.trophyStatusInformation {
    text-align: left;
    justify-content: center;
    align-items: flex-start;
    gap: 0.25em;
}

.trophyStatusName {
    font-weight: bold;
}

.trophyStatusTeam {
    font-style: italic;
}

@media (orientation: portrait) or (max-width: 1599px) {
    .trophyImageAndDescription {
        flex-direction: column;
        align-items: center;
    }

    .trophyImage {
        max-width: 60vw;
        max-height: 72vh;
        position: revert;
        top: 0;
    }
}

@media (max-width: 639px) {
    .trophySeasonAndWinners {
        flex-direction: column;
    }

    .trophyStatus {
        flex-direction: column;
    }
}

